Cập nhật ghi chú mới

--- a/bai_thuc_hanh_chuong_2_Nguyễn Quang Dũng.html/BT Tiet6.html
+++ b/bai_thuc_hanh_chuong_2_Nguyễn Quang Dũng.html/BT Tiet6.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Danh sách sinh viên</title>
-  <style>
+  <!-- <style>
     body{
       font-family: Arial, sans-serif;
     }
@@ -22,7 +22,7 @@
       padding: 8px;
       text-align: center;
     }
-  </style>
+  </style> -->
 </head>
 <body>
   <h2>DANH SÁCH SINH VIÊN</h2>
