--- a/bai_thuc_hanh_chuong_2_Nguyễn Quang Dũng.html/BT3.html
+++ b/bai_thuc_hanh_chuong_2_Nguyễn Quang Dũng.html/BT3.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>BT3 - Bảng điểm</title>
-  <style>
+  <!-- <style>
     table {
       border-collapse: collapse;
       width: 100%;
@@ -19,7 +19,7 @@
     tbody th{
         font-weight:normal;
     }
-  </style>
+  </style> -->
 </head>
 <body>
 
