--- a/bai_thuc_hanh_chuong_2_Nguyễn Quang Dũng.html/BT Tiet5.html
+++ b/bai_thuc_hanh_chuong_2_Nguyễn Quang Dũng.html/BT Tiet5.html
@@ -35,7 +35,7 @@
     </form>
   </div>
 </body>
-<style>
+<!-- <style>
     body{
       font-family: Arial, sans-serif;
       background-color: #f2f2f2;
@@ -101,5 +101,5 @@
       margin-top: -15px;
       margin-bottom: 20px;
     }
-  </style>
+  </style> -->
 </html>
