--- a/bai_thuc_hanh_chuong_2_Nguyễn Quang Dũng.html/BT4.html
+++ b/bai_thuc_hanh_chuong_2_Nguyễn Quang Dũng.html/BT4.html
@@ -2,7 +2,7 @@
 <html lang="vi">
 <head>
   <meta charset="UTF-8">
-  <style>
+  <!-- <style>
     body{
       font-family: Arial, sans-serif;
       background: #f5f5f5;
@@ -78,7 +78,7 @@
       font-weight: bold;
       cursor: pointer;
     }
-  </style>
+  </style> -->
 </head>
 <body>
 
