--- a/bai_tap_css_nang_cao/index.html
+++ b/bai_tap_css_nang_cao/index.html
@@ -42,7 +42,53 @@
             <th>Thao tác</th>
           </tr>
         </thead>
-        <tbody></tbody>
+        <tbody>
+           <tr>
+              <td>1</td>
+              <td>2251061749</td>
+              <td>Nguyễn Quang Dũng</td>
+              <td>dungdung282004@gmail.com</td>
+              <td>Nam</td>
+              <td>08-02-2004</td>
+              <td><a href="#">Sửa</a>|<a href="#">Xóa</a></td>
+          </tr>
+          <tr>
+              <td>2</td>
+              <td>2251061760</td>
+              <td>Nguyễn Trí Duy</td>
+              <td>triduyng@gmail.com</td>
+              <td>Nam</td>
+              <td>25-01-2004</td>
+              <td><a href="#">Sửa</a>|<a href="#">Xóa</a></td>
+          </tr>
+          <tr>
+              <td>3</td>
+              <td>2251061761</td>
+              <td>Nguyễn Khánh Duy</td>
+              <td>duykongur@gmail.com</td>
+              <td>Nam</td>
+              <td>21-12-2004</td>
+              <td><a href="#">Sửa</a>|<a href="#">Xóa</a></td>
+          </tr>
+          <tr>
+              <td>4</td>
+              <td>2251061768</td>
+              <td>Trần Đăng Hiếu</td>
+              <td>trdhieu@gmail.com</td>
+              <td>Nam</td>
+              <td>19-12-2004</td>
+              <td><a href="#">Sửa</a>|<a href="#">Xóa</a></td>
+          </tr>
+          <tr>
+              <td>5</td>
+              <td>2251061779</td>
+              <td>Nguyễn Khắc Trung</td>
+              <td>lucidtide@gmail.com</td>
+              <td>Nam</td>
+              <td>15-3-2004</td>
+              <td><a href="#">Sửa</a>|<a href="#">Xóa</a></td>
+          </tr>
+        </tbody>
       </table>
     </div>
   </div>
